--- a/Bionly/Bionly/Views/LiveviewPage.xaml
+++ b/Bionly/Bionly/Views/LiveviewPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Bionly.Views.LiveviewPage"
-             xmlns:vm="clr-namespace:Bionly.ViewModels"
+             xmlns:vm="clr-namespace:Bionly.ViewModels" xmlns:shared="clr-namespace:LibVLCSharp.Forms.Shared;assembly=LibVLCSharp.Forms" x:DataType="vm:LiveviewViewModel"
              Title="{Binding Title}">
 
     <ContentPage.BindingContext>
@@ -10,10 +10,16 @@
     </ContentPage.BindingContext>
 
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <shared:VideoView MediaPlayer="{Binding MediaPlayer}" MediaPlayerChanged="VideoView_MediaPlayerChanged"/>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
