--- a/Bionly/Bionly/AppShell.xaml
+++ b/Bionly/Bionly/AppShell.xaml
@@ -84,6 +84,9 @@
     <FlyoutItem Title="Liveansicht" Icon="icon_VideoCamera.png">
         <ShellContent Route="LiveviewPage" ContentTemplate="{DataTemplate local:LiveviewPage}" />
     </FlyoutItem>
+    <FlyoutItem Title="Diagramme" Icon="icon_Chart.png">
+        <ShellContent Route="ChartsPage" ContentTemplate="{DataTemplate local:ChartsPage}" />
+    </FlyoutItem>
     <FlyoutItem Title="Einstellungen" Icon="icon_Settings.png">
         <ShellContent Route="SettingsPage" ContentTemplate="{DataTemplate local:SettingsPage}" />
     </FlyoutItem>
@@ -119,8 +122,20 @@
                     </Grid.RowDefinitions>
                     <Image Source="bionly_square_1024.png" WidthRequest="100" HorizontalOptions="Center" Margin="10,0,10,0"/>
                     <StackLayout Grid.Column="1" VerticalOptions="Center">
-                        <Label Text="Bionly" TextColor="White" FontSize="Title"/>
-                        <Label Text="Copyright © tomo_2403" TextColor="White" FontSize="Caption"/>
+                        <Label Text="Bionly" FontSize="Title">
+                            <Label.TextColor>
+                                <OnPlatform x:TypeArguments="Color" Default="White">
+                                    <On Platform="Android">Black</On>
+                                </OnPlatform>
+                            </Label.TextColor>
+                        </Label>
+                        <Label Text="Copyright © tomo_2403" TextColor="White" FontSize="Caption">
+                            <Label.TextColor>
+                                <OnPlatform x:TypeArguments="Color" Default="White">
+                                    <On Platform="Android">Black</On>
+                                </OnPlatform>
+                            </Label.TextColor>
+                        </Label>
                     </StackLayout>
                 </Grid>
                 <Button Text="Systemverwalter" Margin="10,0,10,10"/>
